tests/specs/ecosystem/jesubohr/hotkeypad/0_1_22.test
jesubohr/hotkeypad/0.1.22
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  /** The instance of the hotkeypad on the DOM */ declare instance: HTMLElement;
                                                                    ~~~~~~~~~~~
    at file://<tmpdir>/src/mod.ts:30:69

